--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -303,8 +303,8 @@ msgid "Contingut reservat"
 msgstr "Contingut restringit"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:223
-msgid "Control Quorum"
-msgstr "Control Quòrum"
+msgid "Control quorum"
+msgstr "Control quòrum"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:241
 msgid "Convocatoria"
@@ -827,8 +827,8 @@ msgid "OG4-Afectat"
 msgstr "Afectat"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:204
-msgid "Obrir Quorum"
-msgstr "Obrir Quòrum"
+msgid "Obrir quorum"
+msgstr "Obrir quòrum"
 
 #: ./genweb/organs/content/audio.py:57
 msgid "Only audio files are permitted."
@@ -1244,8 +1244,8 @@ msgid "Tancar"
 msgstr "Tanca"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:212
-msgid "Tancar Quorum"
-msgstr "Tancar Quòrum"
+msgid "Tancar quorum"
+msgstr "Tancar quòrum"
 
 #: ./genweb/organs/content/proposar_punt.py:72
 msgid "Telèfon"
