[UPD] Restringir que no pongan valores no númerico en el campo número de sessión

--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.po
@@ -71,3 +71,6 @@ msgstr "Restringit a afectats"
 
 msgid "time_ever"
 msgstr "Qualsevol data"
+
+msgid "El valor ha de ser numèric."
+msgstr "El valor ha de ser numèric."
