--- a/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/es/LC_MESSAGES/genweb.organs.po
@@ -489,11 +489,11 @@ msgid "El fitxer no existeix"
 msgstr ""
 
 #: ./genweb/organs/content/file.py:119
-msgid "El fitxer públic s'ha de pujar de nou a GDoc desde la vista 'Signar i desar GDoc' de la sessió"
+msgid "El fitxer públic s'ha de pujar de nou a GDoc desde la vista 'Signar i desar documentació i acta' de la sessió"
 msgstr ""
 
 #: ./genweb/organs/content/file.py:134
-msgid "El fitxer restringit s'ha de pujar de nou a GDoc desde la vista 'Signar i desar GDoc' de la sessió"
+msgid "El fitxer restringit s'ha de pujar de nou a GDoc desde la vista 'Signar i desar documentació i acta' de la sessió"
 msgstr ""
 
 #: ./genweb/organs/content/sessio.py:50
@@ -1481,7 +1481,7 @@ msgid "Signants"
 msgstr ""
 
 #: ./genweb/organs/content/templates/sessio_view.pt:256
-msgid "Signar i desar gDOC"
+msgid "Signar i desar documentació i acta"
 msgstr ""
 
 #: ./genweb/organs/content/sessio.py:195
