--- a/genweb/organs/locales/genweb.organs.pot
+++ b/genweb/organs/locales/genweb.organs.pot
@@ -1496,7 +1496,7 @@ msgid "Signants"
 msgstr ""
 
 #: ./genweb/organs/content/templates/sessio_view.pt:256
-msgid "Signar i desar documentació i acta"
+msgid "Gestió signatura i arxiu gDOC"
 msgstr ""
 
 #: ./genweb/organs/content/sessio.py:195
