[UPD] Igualar literal gdoc en todas sus formas a gDOC

--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -489,12 +489,12 @@ msgid "El fitxer no existeix"
 msgstr "El fitxer no existeix"
 
 #: ./genweb/organs/content/file.py:119
-msgid "El fitxer públic s'ha de pujar de nou a GDoc desde la vista 'Gestió signatura i arxiu gDOC"
-msgstr "El fitxer públic s'ha de pujar de nou a GDoc desde la vista 'Gestió signatura i arxiu gDOC"
+msgid "El fitxer públic s'ha de pujar de nou a gDOC desde la vista 'Gestió signatura i arxiu gDOC"
+msgstr "El fitxer públic s'ha de pujar de nou a gDOC desde la vista 'Gestió signatura i arxiu gDOC"
 
 #: ./genweb/organs/content/file.py:134
-msgid "El fitxer restringit s'ha de pujar de nou a GDoc desde la vista 'Gestió signatura i arxiu gDOC"
-msgstr "El fitxer restringit s'ha de pujar de nou a GDoc desde la vista 'Gestió signatura i arxiu gDOC"
+msgid "El fitxer restringit s'ha de pujar de nou a gDOC desde la vista 'Gestió signatura i arxiu gDOC"
+msgstr "El fitxer restringit s'ha de pujar de nou a gDOC desde la vista 'Gestió signatura i arxiu gDOC"
 
 #: ./genweb/organs/content/sessio.py:50
 msgid "El valor ha de ser numèric."
@@ -648,8 +648,8 @@ msgid "Fitxer adjunt"
 msgstr "Fitxer adjunt"
 
 #: ./genweb/organs/content/templates/file_view.pt:96
-msgid "Fitxer públic [Versió baixada del GDoc]"
-msgstr "Fitxer públic [Versió baixada del GDoc]"
+msgid "Fitxer públic [Versió baixada del gDOC]"
+msgstr "Fitxer públic [Versió baixada del gDOC]"
 
 #: ./genweb/organs/content/templates/file_view.pt:90
 msgid "Fitxer públic a restringit"
@@ -660,8 +660,8 @@ msgid "Fitxer reservat"
 msgstr "Fitxer restringit"
 
 #: ./genweb/organs/content/templates/file_view.pt:44
-msgid "Fitxer restringit [Versió baixada del GDoc]"
-msgstr "Fitxer restringit [Versió baixada del GDoc]"
+msgid "Fitxer restringit [Versió baixada del gDOC]"
+msgstr "Fitxer restringit [Versió baixada del gDOC]"
 
 #: ./genweb/organs/content/templates/file_view.pt:39
 msgid "Fitxer restringit a públic"
@@ -700,48 +700,48 @@ msgid "From mail"
 msgstr "Adreça de qui envia els missatges"
 
 #: ./genweb/organs/content/organgovern.py:67
-msgid "GDoc"
-msgstr "GDoc"
+msgid "gDOC"
+msgstr "gDOC"
 
 #: ./genweb/organs/firma_documental/views/firmes.py:73
-msgid "GDoc: No s'ha pogut crear la serie documental: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut crear la serie documental: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut crear la serie documental: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut crear la serie documental: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:74
-msgid "GDoc: No s'ha pogut crear la serie documental: La serie documental no existeix."
-msgstr "GDoc: No s'ha pogut crear la serie documental: La serie documental no existeix."
+msgid "gDOC: No s'ha pogut crear la serie documental: La serie documental no existeix."
+msgstr "gDOC: No s'ha pogut crear la serie documental: La serie documental no existeix."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:62
-msgid "GDoc: No s'ha pogut eliminar els contiguts de GDoc per tornar-los a crear."
-msgstr "GDoc: No s'ha pogut eliminar els contiguts de GDoc per tornar-los a crear."
+msgid "gDOC: No s'ha pogut eliminar els contiguts de gDOC per tornar-los a crear."
+msgstr "gDOC: No s'ha pogut eliminar els contiguts de gDOC per tornar-los a crear."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:66
-msgid "GDoc: No s'ha pogut obtenir el codi del expedient: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut obtenir el codi del expedient: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut obtenir el codi del expedient: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut obtenir el codi del expedient: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:238
-msgid "GDoc: No s'ha pogut pujar el fitxer .url: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut pujar el fitxer .url: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut pujar el fitxer .url: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut pujar el fitxer .url: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:226
-msgid "GDoc: No s'ha pogut pujar el fitxer adjunt: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut pujar el fitxer adjunt: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut pujar el fitxer adjunt: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut pujar el fitxer adjunt: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:230
-msgid "GDoc: No s'ha pogut pujar el àudio: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut pujar el àudio: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut pujar el àudio: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut pujar el àudio: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:79
-msgid "GDoc: No s'ha pogut pujar els fitxers de la sessió: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut pujar els fitxers de la sessió: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut pujar els fitxers de la sessió: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut pujar els fitxers de la sessió: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/views/firmes.py:222
-msgid "GDoc: No s'ha pogut pujar l'acta: Contacta amb algun administrador de la web perquè revisi la configuració."
-msgstr "GDoc: No s'ha pogut pujar l'acta: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgid "gDOC: No s'ha pogut pujar l'acta: Contacta amb algun administrador de la web perquè revisi la configuració."
+msgstr "gDOC: No s'ha pogut pujar l'acta: Contacta amb algun administrador de la web perquè revisi la configuració."
 
 #: ./genweb/organs/firma_documental/controlpanel.py:20
-msgid "Hash GDoc"
-msgstr "Hash GDoc"
+msgid "Hash gDOC"
+msgstr "Hash gDOC"
 
 #: ./genweb/organs/firma_documental/views/firmes.py:358
 msgid "Hi ha fitxers de la sessió que no s'han pujat al Gestor Documental"
@@ -1362,8 +1362,8 @@ msgid "S'ha sobrepasat el temps d'espera per executar la petició: Contacta amb 
 msgstr "S'ha sobrepasat el temps d'espera per executar la petició: Contacta amb algun administrador de la web perquè revisi la configuració"
 
 #: ./genweb/organs/firma_documental/views/firmes.py:200
-msgid "S'han pujat els fitxers correctament al GDoc"
-msgstr "S'han pujat els fitxers correctament al GDoc"
+msgid "S'han pujat els fitxers correctament al gDOC"
+msgstr "S'han pujat els fitxers correctament al gDOC"
 
 #: ./genweb/organs/content/file.py:98
 #: ./genweb/organs/controlpanel.py:57
@@ -1643,8 +1643,8 @@ msgid "URL Còpies Autèntiques"
 msgstr "URL Còpies Autèntiques"
 
 #: ./genweb/organs/firma_documental/controlpanel.py:12
-msgid "URL GDoc"
-msgstr "URL GDoc"
+msgid "URL gDOC"
+msgstr "URL gDOC"
 
 #: ./genweb/organs/firma_documental/controlpanel.py:24
 msgid "URL Generar codi expedient"
@@ -1667,8 +1667,8 @@ msgid "Usuari"
 msgstr "Usuari"
 
 #: ./genweb/organs/firma_documental/controlpanel.py:16
-msgid "Usuari GDoc"
-msgstr "Usuari GDoc"
+msgid "Usuari gDOC"
+msgstr "Usuari gDOC"
 
 #: ./genweb/organs/content/templates/acta_view.pt:125
 msgid "Video"
@@ -1883,7 +1883,7 @@ msgid "sense numeracio"
 msgstr "sense numeració"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:254
-msgid "sign_gdoc"
+msgid "sign_gDOC"
 msgstr "Gestió signatura i arxiu gDOC"
 
 #. Default: "Last year"
